# Ashyk

./: .clang-format  .gitattributes  CMakeLists.txt  README.md  main.cpp
.github/actions/configure-cmake/: action.yml
.github/actions/install-packages/: action.yml
.github/workflows/: ci.yml  cmake.yml
ci/: runtime-input.txt
headers/: Game.h  GameEngine.h  PlayerAnimation.h  RaylibGameEngine.h  ScoreStrategy.h  SpriteAnimation.h  Throw.h
include/: Asik.h  Errors.h  Game.h  Player.h  Throw.h
scripts/: run_cppcheck.sh  run_valgrind.sh
src/: Asik.cpp  Game.cpp  GameEngine.cpp  Player.cpp  RaylibGameEngine.cpp  Throw.cpp  main_raylib.cpp
